src/backend/vm/snapshots/shlang__backend__vm__tests__Lesser or equal true (equal).snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (\"5 <= 5\")"
---
Ok(
    [
        (
            Bool(
                true,
            ),
            2,
        ),
    ],
)
