src/backend/vm/snapshots/shlang__backend__vm__tests__Lesser or equal true (lesser).snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (\"4 <= 5\")"
---
Ok(
    [
        (
            Bool(
                true,
            ),
            2,
        ),
    ],
)
