src/backend/vm/snapshots/shlang__backend__vm__tests__Logical and false left.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (_test_func! (\"false and true\"))"
---
Ok(
    [
        Bool(
            false,
        ),
    ],
)
