src/backend/vm/snapshots/shlang__backend__vm__tests__Logical and false right.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (\"true and false\")"
---
Ok(
    [
        (
            Bool(
                false,
            ),
            2,
        ),
    ],
)
