src/backend/vm/snapshots/shlang__backend__vm__tests__Logical and true.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (\"true and true\")"
---
Ok(
    [
        (
            Bool(
                true,
            ),
            2,
        ),
    ],
)
