src/backend/vm/snapshots/shlang__backend__vm__tests__Logical not false.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (_test_func! (\"not false\"))"
---
Ok(
    [
        Bool(
            true,
        ),
    ],
)
