src/backend/vm/snapshots/shlang__backend__vm__tests__Logical not true.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (_test_func! (\"not true\"))"
---
Ok(
    [
        Bool(
            false,
        ),
    ],
)
