src/backend/vm/snapshots/shlang__backend__vm__tests__Logical or false.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (\"false or false\")"
---
Ok(
    [
        (
            Bool(
                false,
            ),
            2,
        ),
    ],
)
