src/backend/vm/snapshots/shlang__backend__vm__tests__Logical or true left.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (_test_func! (\"true or false\"))"
---
Ok(
    [
        Bool(
            true,
        ),
    ],
)
