src/backend/vm/snapshots/shlang__backend__vm__tests__Logical or true right.snap
---
source: src/backend/vm/tests.rs
description: vm_expr
expression: "run_expr (_test_func! (\"false or true\"))"
---
Ok(
    [
        Bool(
            true,
        ),
    ],
)
